# CustomShortcut

./: .gitignore  CMakeLists.txt  save.json
include/: CreateShortcutWindow.hpp  CustomShortcut.hpp  Device.hpp  InputManager.hpp  MediaController.hpp  Profiles.hpp  RightClickableButton.hpp  gamepad.hpp  mainwindow.hpp
src/: CMakeLists.txt  CreateShortcutWindow.cpp  CustomShortcut.cpp  InputManager.cpp  MediaController.cpp  Profiles.cpp  RightClickableButton.cpp  gamepad.cpp  main.cpp  mainwindow.cpp
